Added client version to About tab

--- a/src/webui/_locales/devltr/messages.json
+++ b/src/webui/_locales/devltr/messages.json
@@ -1,4 +1,8 @@
 {
+  "about#client-version": {
+    "message": "[Ƥşīīƥħǿǿƞ ƒǿǿř Ẇīīƞḓǿǿẇş ƈŀīīḗḗƞŧ ṽḗḗřşīīǿǿƞ:]",
+    "description": "Footer on the 'About' page indicating the client version number. This text is the prefix to the actual number. Like: 'Psiphon for Windows client version: 88'."
+  },
   "about#description": {
     "message": "[Ƥşīīƥħǿǿƞ īīş ȧȧ <strong>ƈḗḗƞşǿǿřşħīīƥ ƈīīřƈŭŭḿṽḗḗƞŧīīǿǿƞ ŧǿǿǿǿŀ</strong> — īīŧ īīş ḓḗḗşīīɠƞḗḗḓ ŧǿǿ ɠīīṽḗḗ ȧȧƈƈḗḗşş ŧǿǿ ŧħḗḗ ǿǿƥḗḗƞ Īīƞŧḗḗřƞḗḗŧ, ƥȧȧşŧ ƈḗḗƞşǿǿřş ȧȧƞḓ ƒīīřḗḗẇȧȧŀŀş. Īīŧ īīş <strong>ǿǿƥḗḗƞ şǿǿŭŭřƈḗḗ</strong> ȧȧƞḓ ḓḗḗṽḗḗŀǿǿƥḗḗḓ īīƞ Ŧǿǿřǿǿƞŧǿǿ, Ƈȧȧƞȧȧḓȧȧ.]",
     "description": "Paragraph on the 'About' page telling users generally what Psiphon is."
