--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -119,6 +119,10 @@
     "message": "If enabled, requests made to servers within your home country will not be tunneled through Psiphon.",
     "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
   },
+  "settings#split-tunnel#reason": {
+    "message": "Websites within your home country are generally not blocked, so enabling this option will give you faster access to those sites and can sometimes reduce ISP data usage costs.",
+    "description": "Help text in the 'Split Tunnel' settings section explaining to the user why they might want to modify (enable) the setting."
+  },
   "settings#split-tunnel#enable-label": {
     "message": "Don't proxy websites within your country",
     "description": "The label on the checkbox that enables 'Split Tunnel'."
@@ -159,9 +163,13 @@
     "message": "Germany",
     "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
   },
-  "settings#egress-region#help-text": {
-    "message": "Psiphon has servers in many different countries. For the fastest connection speed you should choose <strong>“Fastest Country”</strong>, but you may instead prefer to use a server in a specific country.",
-    "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the setting does and what the default (and best) option is."
+  "settings#egress-region#description": {
+    "message": "Psiphon has servers in many different countries. Using a Psiphon server in a country close to your home country will generally provide a better network connection, but you may wish to access websites and services like you are virtually in a specific country.",
+    "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value."
+  },
+  "settings#egress-region#default": {
+    "message": "Choosing the default <strong>“Fastest Country”</strong> option allows Psiphon to automatically choose a server, which will generally result in the best network connection.",
+    "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the default (and best) option is."
   },
   "settings#egress-region#invalid-error-msg": {
     "message": "Choose a valid Psiphon server region.",
@@ -180,8 +188,12 @@
     "description": "Settings section heading. In this section the user can specify what network ports the local Psiphon processes should use (Psiphon uses two such ports). For most people, this should be set to automatic."
   },
   "settings#local-proxy-ports#leave-blank": {
-    "message": "Leave blank for automatic port selection (recommended).",
-    "description": "Help text that appears above the 'Local Proxy Ports' settings. It indicates what the default/best option is (blank, automatic)."
+    "message": "Leave <strong>blank</strong> for automatic port selection (recommended).",
+    "description": "Help text that appears above the 'Local Proxy Ports' settings. 'blank' is the default and best value, and is bolded."
+  },
+  "settings#local-proxy-ports#reason": {
+    "message": "If you use tools on your computer that require manual configuration to work with Psiphon, you will want Psiphon to consistently use the same local port numbers. If you don’t have a reason to specify port numbers, you should allow Psiphon to choose them automatically to help avoid conflicts.",
+    "description": "Help text in the 'Local Proxy Ports' settings area. This explains to the user why they might want to override the default (automatic) settings values."
   },
   "settings#local-proxy-ports#http-label": {
     "message": "HTTP/HTTPS",
@@ -216,8 +228,16 @@
     "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
   },
   "settings#upstream-proxy#by-default": {
-    "message": "If your computer already has a proxy configured, by default Psiphon will use that proxy when establishing a tunnel. You can override that by specifying a proxy to use, or by specifying that no such \"upstream proxy\" should be used.<br> Only HTTP proxies that support HTTPS are allowed.",
+    "message": "If your computer already has a proxy configured, by default Psiphon will use that proxy when establishing a tunnel. You can override that behavior by specifying a proxy to use, or by specifying that no such “upstream proxy” should be used.",
     "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
+  },
+  "settings#upstream-proxy#reason": {
+    "message": "Upstream proxies are sometimes required by schools, universities, or businesses. If you know the upstream proxy settings required by your network provider, then manually setting them here may be required to connect.",
+    "description": "Help text describing why the user might need to modify the upstream proxy settings in order to successfully connect to the Psiphon server."
+  },
+  "settings#upstream-proxy#proxy-reqs": {
+    "message": "Only HTTP proxies that support HTTPS are allowed.",
+    "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
   },
   "settings#upstream-proxy#hostname-label": {
     "message": "Hostname",
@@ -240,11 +260,11 @@
     "description": "Title of the message box showing the error message when a problem is detected with the user's 'upstream proxy settings'."
   },
   "settings#upstream-proxy#error-modal-body-default": {
-    "message": "Psiphon is currently configured to use your system proxy as its \"upstream proxy\".<br>\nHowever, we seem to be unable to connect to a Psiphon server through that proxy.<br>\nPlease enable \"Don't use upstream proxy\" and try again.",
+    "message": "Psiphon is currently configured to use your system proxy as its “upstream proxy”.<br>\nHowever, we seem to be unable to connect to a Psiphon server through that proxy.<br>\nPlease enable “Don't use upstream proxy” and try again.",
     "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has not directly altered these settings (yet), but the default is causing a problem."
   },
   "settings#upstream-proxy#error-modal-body-configured": {
-    "message": "You have configured Psiphon to use an \"upstream proxy\".<br>\nHowever, we seem to be unable to connect to a Psiphon server through that proxy.<br>\nPlease fix the settings and try again.",
+    "message": "You have configured Psiphon to use an “upstream proxy”.<br>\nHowever, we seem to be unable to connect to a Psiphon server through that proxy.<br>\nPlease fix the settings and try again.",
     "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
   },
   "settings#upstream-proxy#error-modal-body-pre-message": {
@@ -260,7 +280,7 @@
     "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
   },
   "settings#transport-mode#help-text": {
-    "message": "Uses Windows L2TP/IPSec virtual networking. This mode will tunnel all of your apps, but it doesn't provide obfuscation. It is <strong>not recommended</strong> for bypassing most firewalls.",
+    "message": "Uses Windows L2TP/IPSec virtual networking. This mode will tunnel all of your apps, but it doesn’t provide obfuscation and so does not have strong censorship circumvention capabilities. It is <strong>not recommended</strong> for bypassing most firewalls.",
     "description": "Help text for the 'Use L2TP/IPSec mode' transport selection checkbox. It gives some technical details and indicates that this mode is not recommended."
   },
   "settings#systray-minimize#heading": {
@@ -270,6 +290,10 @@
   "settings#systray-minimize#help-text": {
     "message": "If enabled, when minimized the Psiphon application window will hide in the notification area (also known as the “system tray” or “systray”, located near the clock on your Windows task bar).",
     "description": "Text explaining to the user what the 'Minimize to Notification Area (System Tray)' setting does if enabled."
+  },
+  "settings#systray-minimize#reason": {
+    "message": "Minimizing Psiphon to the notification area (“system tray”) frees up space on your task bar. This is especially helpful if you often run Psiphon for long periods of time.",
+    "description": "Help text in the 'Minimize to Systray' settings section explaining to the user why they might want to enable it."
   },
   "settings#systray-minimize#enable-label": {
     "message": "Minimize to the notification area (system tray)",
