--- a/src/webui/_locales/devltr/messages.json
+++ b/src/webui/_locales/devltr/messages.json
@@ -143,6 +143,10 @@
     "message": "[Ƈŀǿǿşḗḗ]",
     "description": "Text in the button that dismisses a modal dialog. It is often the only button (no 'OK' or 'Cancel', etc.)."
   },
+  "general#notice-modal-tech-preamble": {
+    "message": "[Ħḗḗřḗḗ īīş ŧħḗḗ ŧḗḗƈħƞīīƈȧȧŀ ḗḗřřǿǿř īīƞƒǿǿ:]",
+    "description": "Preamble before the technical message relating to the error being shown. This is generated within the code and may not be very user-friendly (but it may be necessary for the user to figure out what's wrong)."
+  },
   "language#success-message": {
     "message": "[<strong>Ħḗḗŀŀǿǿ!</strong> Ẇḗḗŀƈǿǿḿḗḗ ŧǿǿ Ƥşīīƥħǿǿƞ.]",
     "description": "A welcome message shown to the user when they first switch to the correct UI language"
@@ -382,10 +386,6 @@
   "settings#upstream-proxy#error-modal-body-default": {
     "message": "[Ƥşīīƥħǿǿƞ īīş ƈŭŭřřḗḗƞŧŀẏ ƈǿǿƞƒīīɠŭŭřḗḗḓ ŧǿǿ ŭŭşḗḗ ẏǿǿŭŭř şẏşŧḗḗḿ ƥřǿǿẋẏ ȧȧş īīŧş “ŭŭƥşŧřḗḗȧȧḿ ƥřǿǿẋẏ”.<br>\nĦǿǿẇḗḗṽḗḗř, ẇḗḗ şḗḗḗḗḿ ŧǿǿ ƀḗḗ ŭŭƞȧȧƀŀḗḗ ŧǿǿ ƈǿǿƞƞḗḗƈŧ ŧǿǿ ȧȧ Ƥşīīƥħǿǿƞ şḗḗřṽḗḗř ŧħřǿǿŭŭɠħ ŧħȧȧŧ ƥřǿǿẋẏ.<br>\nƤŀḗḗȧȧşḗḗ ḗḗƞȧȧƀŀḗḗ “Ḓǿǿƞ'ŧ ŭŭşḗḗ ŭŭƥşŧřḗḗȧȧḿ ƥřǿǿẋẏ” ȧȧƞḓ ŧřẏ ȧȧɠȧȧīīƞ.]",
     "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has not directly altered these settings (yet), but the default is causing a problem."
-  },
-  "settings#upstream-proxy#error-modal-body-pre-message": {
-    "message": "[Ħḗḗřḗḗ īīş ŧħḗḗ ŧḗḗƈħƞīīƈȧȧŀ ḗḗřřǿǿř īīƞƒǿǿ:]",
-    "description": "Preamble before the technical error message is shown in the 'Upstream Proxy Error' dialog box. This is generated within the code and may not be very user-friendly (but it may be necessary for the user to figure out what's wrong)."
   },
   "settings#upstream-proxy#error-modal-title": {
     "message": "[Ŭŭƥşŧřḗḗȧȧḿ Ƥřǿǿẋẏ Ḗḗřřǿǿř]",
