--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -267,10 +267,6 @@
     "message": "You have configured Psiphon to use an “upstream proxy”.<br>\nHowever, we seem to be unable to connect to a Psiphon server through that proxy.<br>\nPlease fix the settings and try again.",
     "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
   },
-  "settings#upstream-proxy#error-modal-body-pre-message": {
-    "message": "Here is the technical error info:",
-    "description": "Preamble before the technical error message is shown in the 'Upstream Proxy Error' dialog box. This is generated within the code and may not be very user-friendly (but it may be necessary for the user to figure out what's wrong)."
-  },
   "settings#transport-mode#heading": {
     "message": "Transport Mode",
     "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
@@ -398,6 +394,10 @@
   "general#modal-close-button": {
     "message": "Close",
     "description": "Text in the button that dismisses a modal dialog. It is often the only button (no 'OK' or 'Cancel', etc.)."
+  },
+  "general#notice-modal-tech-preamble": {
+    "message": "Here is the technical error info:",
+    "description": "Preamble before the technical message relating to the error being shown. This is generated within the code and may not be very user-friendly (but it may be necessary for the user to figure out what's wrong)."
   },
   "appbackend#state-stopped-title": {
     "message": "Psiphon is disconnected",
